--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ Temporary Items
 .apdisk
 
 .vscode/*
+.idea
 
 # Local History for Visual Studio Code
 .history/
@@ -73,3 +74,5 @@ Temporary Items
 *.vsix
 
 .wrangler
+
+.worker-next
