--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "remark-math": "^5.1.1",
     "swr": "^2.0.3",
     "use-clipboard-copy": "^0.2.0",
-    "use-constant": "^1.1.1"
+    "use-constant": "^1.1.1",
+    "wrangler": "^3.13.1"
   },
   "devDependencies": {
-    "@opennextjs/cloudflare": "^0.2.1",
+    "vercel": "39.1.1",
+    "@cloudflare/next-on-pages": "^1.6.3",
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.0.2",
     "@types/node": "18.16.18",
@@ -72,8 +74,7 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "5.1.3",
-    "wrangler": "^3.94.0"
+    "typescript": "5.1.3"
   },
   "overrides": {
     "vercel": "$vercel"
